# nl_2_analytics

./: .cz.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: .gitignore  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_create_schema_store.py  004_create_query_history.py  005_create_audit_store.py  006_add_fk_indexes.py  007_create_auth_schema.py
backend/app/: main.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/core/: config.py  database.py  di.py  logging.py  metrics.py  telemetry.py
backend/app/middleware/: cors.py  error_handler.py  logging.py  rate_limit.py  request_id.py
backend/app/schemas/: health.py
backend/app/services/: auth_service.py  store.py
backend/ke/api/: main.py
backend/ke/benchmark/: load_test.py  queries.py  runner.py
backend/ke/models/: __init__.py  audit.py  config.py  execution.py  feedback.py  generation.py  pipeline.py  planning.py  policy.py  quality.py  schema.py
backend/ke/services/: cache.py  demo_data.py  executor.py  explain.py  generator.py  history.py  inference.py  intent.py  pipeline.py  planner.py  prompts.py  quality_scorer.py  router.py  schema_graph.py  schema_registry.py  schema_resolver.py  session.py  session_redis.py  validator.py
backend/scripts/: migrate.py  seed.py
backend/shared/: __init__.py
backend/tests/: conftest.py  test_config.py  test_e2e_pipeline.py  test_executor.py  test_generator.py  test_health.py  test_inference.py  test_intent.py  test_learning.py  test_pipeline.py  test_planner.py  test_policy.py  test_public_api.py  test_quality_scorer.py  test_query_history.py  test_router.py  test_schema_models.py  test_schema_repository.py  test_schema_resolver.py  test_schema_store_integration.py  test_session.py  test_shared_models.py
(+292 files in other folders)
