[project]
name = "schemaintern-backend"
version = "0.1.0"
description = "Enterprise Data Intelligence Platform - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "dependency-injector>=4.43.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-client>=0.21.0",
    "aiomysql>=0.2.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "snowflake-connector-python>=3.12.0",
    "duckdb>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",

    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "bcrypt>=4.2.0",
    "cryptography>=44.0.0",
    "google-cloud-bigquery>=3.26.0",
    "sqlglot>=25.0.0",
    "huggingface-hub>=0.27.0",
    "openai>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"schema_intelligence/annotators/rule_based.py" = ["E501"]
"schema_intelligence/annotators/llm_provider.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app", "app.*", "shared", "shared.*", "ke", "ke.*", "schema_intelligence", "schema_intelligence.*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
